CKA-md/Script/Chapter 9- Serivice/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /somepath
        pathType: Prefix 
        backend:
          service:
            name: my-service
            port: 
              number: 80
